--- a/.github/workflows/Datadog_Code_Analysis.yml
+++ b/.github/workflows/Datadog_Code_Analysis.yml
@@ -2,14 +2,16 @@
 # For more info, https://us3.datadoghq.com/ci/setup/code-analysis
 
 on: 
-#  push:
-#    branches: [ "main" ]
+  push:
+    branches: [ "main" ]
+  schedule:
+    - cron: '0 0 1 * *'
   workflow_dispatch:
 
 name: Datadog Code Analysis
 
 env:
-  PROJECTNAME: 'Azure-Relay-Bridge' 
+  SERVICEANALYZED: 'Application' 
 
 jobs:
   static-analysis:
@@ -24,7 +26,7 @@ jobs:
       with:
         dd_api_key: ${{ secrets.DD_API_KEY }}
         dd_app_key: ${{ secrets.DD_APP_KEY }}
-        dd_service: ${{ env.PROJECTNAME }}
+        dd_service: ${{ env.SERVICEANALYZED }}
         dd_env: ci
         dd_site: us3.datadoghq.com
         cpu_count: 2
@@ -40,6 +42,6 @@ jobs:
       with:
         dd_api_key: ${{ secrets.DD_API_KEY }}
         dd_app_key: ${{ secrets.DD_APP_KEY }}
-        dd_service: ${{ env.PROJECTNAME }}
+        dd_service: ${{ env.SERVICEANALYZED }}
         dd_env: ci
         dd_site: us3.datadoghq.com
